<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="vn.edu.ueh.speedyeats.View.Fragment.HomeFragment"
    android:id="@+id/swipe_home">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:visibility="gone"
                android:id="@+id/toolbar_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                android:layout_margin="10dp"
                android:elevation="2dp"
                android:background="#fff300"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_weight="6"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="Ngày mới vui vẻ"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_name_home"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/xinchao"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="18dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Email: "
                                android:textColor="#000000"
                                android:textSize="10dp"
                                android:textStyle="italic" />

                            <TextView
                                android:id="@+id/tv_email_home"
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="1dp"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:text="xxx.com"
                                android:textColor="#000000"
                                android:textSize="10sp"
                                android:textStyle="italic" />
                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:weightSum="10"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:id="@+id/cir_avatar_home"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:src="@drawable/x2"/>

                <EditText
                    android:id="@+id/edt_search_home"
                    android:layout_width="105dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_weight="7"
                    android:background="@drawable/border5"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:drawableStart="@drawable/ic_search"
                    android:drawablePadding="8dp"
                    android:focusable="false"
                    android:hint="Search"
                    android:imeOptions="actionSearch"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:singleLine="true" />
                <RelativeLayout
                    android:layout_marginStart="5dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_centerHorizontal="true"
                        android:id="@+id/img_home_cart"
                        android:layout_width="30dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_cart4"/>

                    <TextView
                        android:visibility="gone"
                        android:gravity="center"
                        android:id="@+id/tv_number_cart"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:background="@drawable/boder_score"
                        android:padding="2dp"
                        android:textColor="@color/white"
                        android:layout_alignParentEnd="true"
                        android:textSize="8dp" />

                </RelativeLayout>


            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_loai_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp" />

            <androidx.cardview.widget.CardView
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <androidx.viewpager.widget.ViewPager
                        android:id="@+id/viewpager"
                        android:layout_width="390dp"
                        android:layout_height="120dp" />
                    <me.relex.circleindicator.CircleIndicator
                        android:layout_alignBottom="@id/viewpager"
                        android:layout_centerHorizontal="true"
                        android:id="@+id/circle_indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="18dp"
                        android:layout_gravity="center_horizontal"
                        app:ci_drawable="@drawable/circle_radius_selected"
                        app:ci_drawable_unselected="@drawable/circle_radius_unselected"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_marginTop="5dp"
                android:id="@+id/tv_Garan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:elevation="5dp"
                android:text="Gà rán"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_Garan"
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:elevation="5dp"
                android:text="Pizza"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_Pizza"
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="Khoai tây"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_Khoaitay"
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="Hamburger"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="2dp"
                android:layout_marginStart="20dp"
                android:id="@+id/rcv_Hamburger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="Salad"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />
            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="2dp"
                android:layout_marginStart="20dp"
                android:id="@+id/rcv_Salad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>