...
                    android:layout_marginEnd="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/search_view"
                        android:layout_width="332dp"
                        android:layout_height="45dp"
                        android:layout_weight="8"
                        android:background="@drawable/search_view_bg"
                        app:iconifiedByDefault="false"
                        app:queryBackground="@null"
...
