...
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/tv_null_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="Giỏ hàng của bạn đang trống"
        android:textSize="20sp"
        android:textStyle="bold"
...
